--- a/proxy/package.json
+++ b/proxy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FECdemo",
+  "name": "sdc_demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^1.6.0-27",
     "cors": "^2.8.5",
     "express": "^4.16.2",
     "http-proxy": "^1.17.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "newrelic": "^5.7.0"
   }
 }
